force-app/main/default/objects/Campaign/fields/Facebook_Page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page__c</fullName>
    <label>Facebook Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epitome Integrated City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>