force-app/main/default/objects/Campaign/fields/IVR_Number__c.field-meta.xml
<CustomField>
    <fullName>IVR_Number__c</fullName>
    <label>IVR Number</label>
    <type>Phone</type>
</CustomField>