force-app/main/default/objects/Campaign/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Epitome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>