force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import From File</fullName>
            </value>
            <value>
                <fullName>Show Case Lite</fullName>
            </value>
            <value>
                <fullName>Show Case Pro</fullName>
            </value>
            <value>
                <fullName>Sr Inbound</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Facebook (Epitome Projects)</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Adgebra</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Treda Property Show 2021</fullName>
            </value>
            <value>
                <fullName>Sr Inbound (+919538699929)</fullName>
            </value>
            <value>
                <fullName>Sr Inbound (+919538599929)</fullName>
            </value>
            <value>
                <fullName>Sr Inbound (+919538499929)</fullName>
            </value>
            <value>
                <fullName>Sr Inbound (+9108068950085)</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>EXPO</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Google Video</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Railway</fullName>
            </value>
            <value>
                <fullName>3dm_google</fullName>
            </value>
            <value>
                <fullName>BTL</fullName>
            </value>
            <value>
                <fullName>Chat_Facebook</fullName>
            </value>
            <value>
                <fullName>Chat_Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>