force-app/main/default/objects/Campaign/fields/Spent__c.field-meta.xml
<CustomField>
    <fullName>Spent__c</fullName>
    <label>Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>