force-app/main/default/objects/Campaign/recordTypes/Facebook.recordType-meta.xml
<RecordType>
    <fullName>Facebook</fullName>
    <active>true</active>
    <label>Facebook</label>
</RecordType>