force-app/main/default/objects/Campaign/recordTypes/Google.recordType-meta.xml
<RecordType>
    <fullName>Google</fullName>
    <active>true</active>
    <label>Google</label>
</RecordType>