force-app/main/default/objects/Campaign/recordTypes/Integration_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Integration_Campaign</fullName>
    <active>true</active>
    <label>Integration Campaign</label>
</RecordType>