force-app/main/default/objects/Campaign/recordTypes/Traditional_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Traditional_Campaign</fullName>
    <active>true</active>
    <label>Traditional Campaign</label>
</RecordType>